Put in navbar for mobile compatibility, hasn't been styled yet

--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
-                <img src="imgs/banner.jpg" id="banner">
+                <script type="text/javascript" src="navbar.js"></script>
+                <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
             <div class="row">
