--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
     <body>
         <div class="container">
+
             <!--Banner-->
             <div class="row">
+                <script type="text/javascript" src="navbar.js"></script>
                 <img src="imgs/banner.jpg" id="banner">
             </div>
 
