--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
+                <script type="text/javascript" src="navbar.js"></script>
                 <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
@@ -32,12 +33,8 @@
                     <h1>Nerf Firestrike Parts</h1>
                     <p>The Firestrike is a single-shot spring powered blaster made by Nerf. It is a very reliable secondary, as it is both powerful and accurate. The simple internals make it an ideal beginners blaster to modify.</p>
 
-                    <!--Spacer-->
-                    <div class="col-lg-1">
-                    </div>
-
                     <!--Column 1-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-1">
 
                         <a href="/TacticalCad/products/ffrs.html">
                             <li class="itemTile">
@@ -58,12 +55,8 @@
                         <br>
                     </div>
 
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
                     <!--Column 2-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-2">
                         <a href="/TacticalCad/products/fpc.html">
                             <li class="itemTile">
                                 <img src="/TacticalCad/products/imgs/fpc/cad.jpg">
@@ -72,10 +65,6 @@
                             </li>
                         </a>
                         <br>
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
                     </div>
 
                     <script>printFooter();</script>
