--- a/lists/universal.html
+++ b/lists/universal.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
+                <script type="text/javascript" src="navbar.js"></script>
                 <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
@@ -32,12 +33,8 @@
                     <h1>Nerf Universal Parts</h1>
                     <p>These parts are not blaster-specific, and can go on most Nerf blasters.</p>
 
-                    <!--Spacer-->
-                    <div class="col-lg-1">
-                    </div>
-
                     <!--Column 1-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-1">
 
                         <a href="/TacticalCad/products/upr.html">
                             <li class="itemTile">
@@ -50,17 +47,9 @@
 
                     </div>
 
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
                     <!--Column 2-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-2">
 
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
                     </div>
 
                     <script>printFooter();</script>
