--- a/lists/retaliator.html
+++ b/lists/retaliator.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
+                <script type="text/javascript" src="navbar.js"></script>
                 <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
@@ -32,12 +33,8 @@
                     <h1>Nerf Retaliator Parts</h1>
                     <p>The Retaliator is a versatile spring clip-fed blaster. It is the original Modulus, with many interchangeable parts for different missions. </p>
 
-                    <!--Spacer-->
-                    <div class="col-lg-1">
-                    </div>
-
                     <!--Column 1-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-1">
 
                         <a href="/TacticalCad/products/rht.html">
                             <li class="itemTile">
@@ -49,17 +46,9 @@
                         <br>
                     </div>
 
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
                     <!--Column 2-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-lg-offset-2">
 
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
                     </div>
 
                     <script>printFooter();</script>
