--- a/products/ffrs.html
+++ b/products/ffrs.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
+                <script type="text/javascript" src="navbar.js"></script>
                 <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
