--- a/products/ffrs.html
+++ b/products/ffrs.html
@@ -7,7 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="../scripts.js"></script>
+        <script type="text/javascript" src="/TacticalCad/scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../stylesheet.css">
         <title>Tactical CAD - Firestrike Iron Sights</title>
     </head>
